# rtsp-to-onvif-m-adapter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  REQUIREMENTS.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: development.md  releasing.md  schema.md
examples/: __init__.py  processors.py
schema/: onvif-mj.example.json  onvif-mj.schema.json
schema/onvif/: README.md
src/onvif_m/: __init__.py  __main__.py  bench.py  capture.py  detect.py  health.py  metadata.py  model.py  onvif_xml.py  pipeline.py  plugins.py  publish.py
tests/: conftest.py  container_e2e.sh  test_bench.py  test_capture.py  test_cli.py  test_compliance.py  test_detect.py  test_detect_accuracy.py  test_e2e.py  test_health.py  test_json_schema.py  test_metadata.py  test_model.py  test_mqtt_integration.py  test_onvif_xml.py  test_openvino_integration.py  test_pipeline.py  test_plugins.py  test_publish.py  test_rtsp_integration.py
tests/fixtures/: fetch_samples.sh
tests/mqtt/: README.md  run-broker.sh
tests/rtsp/: README.md  run-rtsp.sh
